After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725122 - Fix build of PyGObject on Visual C++
Fix build of PyGObject on Visual C++
Status: RESOLVED FIXED
Product: pygobject
Classification: Bindings
Component: general
3.11.x
Other Windows
: Normal normal
: ---
Assigned To: Nobody's working on this now (help wanted and appreciated)
Python bindings maintainers
Depends on:
Blocks:
 
 
Reported: 2014-02-25 06:42 UTC by Fan, Chun-wei
Modified: 2014-02-25 07:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build of PyGObject on Visual C++ (2.55 KB, patch)
2014-02-25 06:43 UTC, Fan, Chun-wei
committed Details | Review

Description Fan, Chun-wei 2014-02-25 06:42:40 UTC
Hi,

There were some moves and changes to the PyGObject sources that needed some updates so that it will build under Visual C++ again[1], namely the fallback definitions for INFINITY and NAN needs to be moved to pygi-basictypes.c, and a variable definition in the middle of the block needs to be avoided.

I will attach the patch which accomplishes these in a bit.

With blessings, thank you!
Comment 1 Fan, Chun-wei 2014-02-25 06:43:36 UTC
Created attachment 270222 [details] [review]
Fix build of PyGObject on Visual C++
Comment 2 Simon Feltman 2014-02-25 07:32:38 UTC
Thanks!
My bad with the incorrect NAN and INFINITY move.
As a side note, I'll look into adding:
-Wdeclaration-after-statement or even -Werror=declaration-after-statement
to the build as I'm sure these get a bit tiresome for you.