Fix Build on Visual Studio

Some items from pygi-enum-marshal.c were moved to pygi-basictype.c, which
included the use of the NAN and INFINITY macros/constants, so the
definitions for those need to be moved to pygi-basictype.c as well.  Also
avoid defining a variable in the middle of the block.

https://bugzilla.gnome.org/show_bug.cgi?id=725122