gi/pygi-basictype.c
@@ -25,6 +25,22 @@
 #include "pygi-argument.h"
 #include "pygi-private.h"
 
+#ifdef G_OS_WIN32
+#ifdef _MSC_VER
+#include <math.h>
+
+#ifndef NAN
+static const unsigned long __nan[2] = {0xffffffff, 0x7fffffff};
+#define NAN (*(const float *) __nan)
+#endif
+
+#ifndef INFINITY
+#define INFINITY HUGE_VAL
+#endif
+
+#endif
+#endif
+
 
 /*
  * From Python Marshaling
